@@ -4,6 +4,7 @@
   * Add "xover" exit warning status.
   * Workaround streaming bug in DNEWS servers that drops the end part of a xover reply (by disabling streaming and trying again.)
   * Allow -p to create missing directories recursively (with --makedirs) and add # setting for makedirs.
+  * Add fatal_user_errors ngetrc setting to make user errors cause an immediate exit rather than continuing if possible.
 
 2002-08-04 v0.21:
   * Remove configure check for gcc<=2.7 since it can't really build nget anymore and the test was incorrectly detecting some gcc versions.
